# pasteit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: Application.h  Paste.h
src/: Application.cpp  Paste.cpp
